--- a/.gitignore
+++ b/.gitignore
@@ -1228,3 +1228,4 @@ mellow-sorter-env/lib/python3.9/site-packages/toml-0.10.2.dist-info/RECORD
 mellow-sorter-env/lib/python3.9/site-packages/toml-0.10.2.dist-info/top_level.txt
 mellow-sorter-env/lib/python3.9/site-packages/toml-0.10.2.dist-info/WHEEL
 .vscode/settings.json
+mellow_sorter_v8/mellow_sorter_save
