Mellow sorter pro v2 wip

--- a/.gitignore
+++ b/.gitignore
@@ -3842,3 +3842,11 @@ mellow-sorter-env/lib/python3.9/site-packages/pip-20.3.3.dist-info/RECORD
 mellow-sorter-env/lib/python3.9/site-packages/pip-20.3.3.dist-info/REQUESTED
 mellow-sorter-env/lib/python3.9/site-packages/pip-20.3.3.dist-info/top_level.txt
 mellow-sorter-env/lib/python3.9/site-packages/pip-20.3.3.dist-info/WHEEL
+mellow-sorter-env/lib/python3.9/site-packages/__pycache__/exiftool.cpython-39.pyc
+mellow-sorter-env/lib/python3.9/site-packages/PyExifTool-0.1.1-py3.9.egg-info/dependency_links.txt
+mellow-sorter-env/lib/python3.9/site-packages/PyExifTool-0.1.1-py3.9.egg-info/installed-files.txt
+mellow-sorter-env/lib/python3.9/site-packages/PyExifTool-0.1.1-py3.9.egg-info/PKG-INFO
+mellow-sorter-env/lib/python3.9/site-packages/PyExifTool-0.1.1-py3.9.egg-info/SOURCES.txt
+mellow-sorter-env/lib/python3.9/site-packages/PyExifTool-0.1.1-py3.9.egg-info/top_level.txt
+mellow-sorter-env/lib/python3.9/site-packages/exiftool.py
+test.py
