--- a/.gitignore
+++ b/.gitignore
@@ -3850,3 +3850,5 @@ mellow-sorter-env/lib/python3.9/site-packages/PyExifTool-0.1.1-py3.9.egg-info/SO
 mellow-sorter-env/lib/python3.9/site-packages/PyExifTool-0.1.1-py3.9.egg-info/top_level.txt
 mellow-sorter-env/lib/python3.9/site-packages/exiftool.py
 test.py
+mellow_sorter_pro_v2 WIP/Me/Mellow_sroter_pro.dat
+exif.py
